--- a/proyectos/index.html
+++ b/proyectos/index.html
@@ -11,6 +11,14 @@
     <div>
         <img src="https://rickandmortyapi.com/api/character/avatar/3.jpeg" alt="">
     </div>
+   
+    <div>
+        <ul>
+            <li> HTML</li>
+            <li> CSS</li>
+            <li> JS</li>
+        </ul>
+    </div>
     <button onclick="handlerClick()">
         Hazme click
     </button>
